# CppSampleProject

./: .gitignore  CMakeLists.txt  README.md
Source/: CMakeLists.txt  Main.cpp  MyLib.cpp
Test/: CMakeLists.txt  TestMyLib.cpp
